# teapod

./: Cargo.toml  LICENSE  README.md
src/: components.rs  main.rs  podcast.rs  rss.rs
src/components/: add_podcast_popup.rs  episode_info_popup.rs  episode_list.rs  error_info_popup.rs  player.rs  podcast_info_popup.rs  podcast_list.rs
